--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,9 +9,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+    /* Habilita el scroll suave */
+
 }
 
 body {
     min-width: 320px;
     overflow-x: hidden;
+    transition: all 1s;
 }
