--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
   color: #08A6E4;
   margin-left: 1.5625rem;
   width: 60%;
-  margin-top: 1.25rem;
+  top: 0.9375rem;
+  position: relative;
 }
 
 .header__button__hamburger {
@@ -25,7 +26,7 @@
   height: 0.875rem;
   margin-left: 20rem;
   position: relative;
-  bottom: 1.6rem;
+  bottom: 0.6rem;
 }
 
 .header__nav__list {
@@ -1438,6 +1439,19 @@ footer {
     bottom: 0.7rem;
   }
 }
+.progress-bar {
+  position: fixed;
+  width: 100%;
+  height: 0.3rem;
+  z-index: 5;
+}
+
+.progress-bar__line {
+  width: 0%;
+  height: 100%;
+  background-color: #08A6E4;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
