--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,7 +13,8 @@
     color: $blue;
     margin-left: 1.5625rem;
     width: 60%;
-    margin-top: 1.25rem;
+    top: .9375rem;
+    position: relative;
 }
 
 .header__button__hamburger {
@@ -23,7 +24,7 @@
     height: 0.875rem;
     margin-left: 20rem;
     position: relative;
-    bottom: 1.6rem;
+    bottom: 0.6rem;
 }
 
 .header__nav__list {
