Button Return to the top done

--- a/css/style.css
+++ b/css/style.css
@@ -1452,6 +1452,41 @@ footer {
   background-color: #08A6E4;
 }
 
+.return__top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  background-color: #ffffff;
+  border: 3px solid #08A6E4;
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.return__top:hover {
+  background-color: #08A6E4;
+  color: #ffffff;
+}
+
+.return__top img {
+  width: 4rem;
+  height: 4rem;
+}
+
+.return__top button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
