Send data from testing API improved

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -211,4 +211,9 @@
         height: 3.5625rem;
         left: 3rem;
     }
+
+    .section__contact__div__form__sentStatus {
+        position: relative;
+        left: 1.875rem;
+    }
 }
