--- a/css/style.css
+++ b/css/style.css
@@ -1419,12 +1419,17 @@
     height: 3.5625rem;
     left: 3rem;
   }
+  .section__contact__div__form__sentStatus {
+    position: relative;
+    left: 1.875rem;
+  }
 }
 footer {
   width: 100%;
   height: 5.5625rem;
   position: absolute;
   box-shadow: 0px -5px 40px 0px rgba(0, 0, 0, 0.2);
+  margin-top: 15%;
 }
 
 .footer-text h2 {
