--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -6,7 +6,7 @@ footer {
     height: 5.5625rem;
     position: absolute;
     box-shadow: 0px -5px 40px 0px #00000033;
-
+    margin-top: 15%;
 }
 
 .footer-text h2 {
