--- a/css/style.css
+++ b/css/style.css
@@ -471,6 +471,12 @@
   position: relative;
 }
 
+.section__cards__pricing__select {
+  position: relative;
+  margin-top: 6%;
+  left: 39%;
+}
+
 /* Pricing card style */
 .section__cards__pricing__first-card {
   width: 18.3125rem;
@@ -748,6 +754,11 @@
   }
   .section__cards__pricing h2 {
     margin-left: 40%;
+  }
+  .section__cards__pricing__select {
+    position: relative;
+    margin-top: 3%;
+    left: 47%;
   }
   .section__cards__pricing__first-card,
   .section__cards__pricing__second-card,
