--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @use "_progressBar";
 @use "_topArrow";
 @use "_slider";
+@use "_modal";
 
 * {
     box-sizing: border-box;
@@ -21,4 +22,5 @@ body {
     min-width: 320px;
     overflow-x: hidden;
     transition: all 1s;
+
 }
