--- a/sass/_section_cards.scss
+++ b/sass/_section_cards.scss
@@ -176,6 +176,7 @@
     border: $border;
     border-radius: $radius;
     position: relative;
+    cursor: pointer;
 }
 
 .section__cards__pricing__first-card__bt {
