--- a/css/style.css
+++ b/css/style.css
@@ -1192,7 +1192,7 @@
 
 /* P Style */
 .section__contact__div p:not(p[class=section__contact__div__consent]) {
-  width: 19.5rem;
+  width: auto;
   height: 1.375rem;
   bottom: auto;
   top: auto;
@@ -1391,7 +1391,6 @@
     top: 18%;
   }
   .section__contact__div p:not(p[class=section__contact__div__consent]) {
-    width: 21.4375rem;
     top: 7%;
   }
   .section__contact__div a[href="tel:123456789"] {
