--- a/css/style.css
+++ b/css/style.css
@@ -475,6 +475,21 @@
   position: relative;
   margin-top: 6%;
   left: 39%;
+  width: auto;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 40px;
+  background-color: #fff;
+  font-size: 16px;
+  color: #08A6E4;
+  border-color: #08A6E4;
+  appearance: none;
+  /* Elimina el estilo por defecto del select */
+  -webkit-appearance: none;
+  /* Para navegadores basados en WebKit */
+  -moz-appearance: none;
+  /* Para Firefox */
+  cursor: pointer;
 }
 
 /* Pricing card style */
