--- a/sass/_section_cards.scss
+++ b/sass/_section_cards.scss
@@ -22,6 +22,21 @@
     position: relative;
     margin-top: 6%;
     left: 39%;
+    width: auto;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 40px;
+    background-color: #fff;
+    font-size: 16px;
+    color: $blue;
+    border-color: $blue;
+    appearance: none;
+    /* Elimina el estilo por defecto del select */
+    -webkit-appearance: none;
+    /* Para navegadores basados en WebKit */
+    -moz-appearance: none;
+    /* Para Firefox */
+    cursor: pointer;
 }
 
 /* Pricing card style */
