--- a/css/style.css
+++ b/css/style.css
@@ -1637,6 +1637,7 @@ footer {
     display: flex;
     transition: transform 0.5s ease-in-out;
     width: 100%;
+    border-radius: 2.5rem;
   }
   .slider__images__container img {
     width: 100%;
@@ -1644,6 +1645,7 @@ footer {
     flex-shrink: 0;
     width: 600px;
     height: 400px;
+    border-radius: 2.5rem;
   }
   .slider__butons__prev,
   .slider__butons__next {
