--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -76,6 +76,8 @@
         display: flex;
         transition: transform 0.5s ease-in-out;
         width: 100%;
+        border-radius: 2.5rem;
+
     }
 
     .slider__images__container img {
@@ -84,6 +86,7 @@
         flex-shrink: 0;
         width: 600px;
         height: 400px;
+        border-radius: 2.5rem;
     }
 
     .slider__butons__prev,
