--- a/css/style.css
+++ b/css/style.css
@@ -1351,7 +1351,6 @@
   border-radius: 2.5rem;
   position: relative;
   cursor: pointer;
-  margin-bottom: 2.75rem;
   cursor: pointer;
 }
 
@@ -1371,7 +1370,6 @@
   border-radius: 2.5rem;
   position: relative;
   cursor: pointer;
-  margin-bottom: 2.75rem;
 }
 
 /* Error text styles */
@@ -1389,6 +1387,13 @@
   position: relative;
   left: 3%;
   top: 10%;
+}
+
+.section__contact__div__form__sentStatus {
+  /* position: relative; */
+  width: 100%;
+  text-align: center;
+  margin-top: 5%;
 }
 
 /* Desktop version */
@@ -1452,8 +1457,7 @@
     left: 3rem;
   }
   .section__contact__div__form__sentStatus {
-    position: relative;
-    left: 1.875rem;
+    text-align: start;
   }
 }
 footer {
@@ -1461,7 +1465,7 @@ footer {
   height: 5.5625rem;
   position: absolute;
   box-shadow: 0px -5px 40px 0px rgba(0, 0, 0, 0.2);
-  margin-top: 5%;
+  margin-top: 30%;
 }
 
 .footer-text h2 {
