--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -112,14 +112,11 @@
 /* Button Style */
 .section__contact__div__form__button {
     @include sectionCards.buttonStyle(14.125rem, 3.5625rem, auto, 3rem, auto, $openSansFont, .8125rem, 700, 1.1062rem, $white_advantages_frames, $blue, none, 2.5rem);
-    margin-bottom: 2.75rem;
     cursor: pointer;
 }
 
 .section__contact__div__form__button:disabled {
     @include sectionCards.buttonStyle(14.125rem, 3.5625rem, auto, 3rem, auto, $openSansFont, .8125rem, 700, 1.1062rem, $white_advantages_frames, $grey_marketing, none, 2.5rem);
-    margin-bottom: 2.75rem;
-
 }
 
 /* Error text styles */
@@ -137,6 +134,13 @@
     position: relative;
     left: 3%;
     top: 10%;
+}
+
+.section__contact__div__form__sentStatus {
+    /* position: relative; */
+    width: 100%;
+    text-align: center;
+    margin-top: 5%;
 }
 
 
@@ -215,7 +219,6 @@
     }
 
     .section__contact__div__form__sentStatus {
-        position: relative;
-        left: 1.875rem;
+        text-align: start;
     }
 }
