--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
   border: none;
   width: 1.25rem;
   height: 0.875rem;
-  margin-left: 20rem;
+  margin-left: 80%;
   position: relative;
   bottom: 0.6rem;
 }
@@ -938,10 +938,10 @@
 }
 
 .section__marketing__img {
-  width: 48.6875rem;
+  width: 100%;
   height: 16.6875rem;
   position: relative;
-  left: -12.5938rem;
+  /*     left: -12.5938rem; */
 }
 
 .section__marketing__container {
@@ -1206,7 +1206,7 @@
 
 /* P Style */
 .section__contact__div p:not(p[class=section__contact__div__consent]) {
-  width: auto;
+  width: 70%;
   height: 1.375rem;
   bottom: auto;
   top: auto;
@@ -1412,6 +1412,7 @@
     top: 18%;
   }
   .section__contact__div p:not(p[class=section__contact__div__consent]) {
+    width: 80%;
     top: 7%;
   }
   .section__contact__div a[href="tel:123456789"] {
@@ -1505,6 +1506,10 @@ footer {
 
 /* Deskop version */
 @media screen and (min-width: 768px) {
+  footer {
+    height: 5.5625rem;
+    margin-top: 10%;
+  }
   .footer-text h2,
   .footer-text p {
     position: relative;
@@ -1537,14 +1542,15 @@ footer {
   background-color: #ffffff;
   border: 3px solid #08A6E4;
   border-radius: 50%;
-  width: 5rem;
-  height: 5rem;
+  width: 2rem;
+  height: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: all 0.3s;
+  opacity: 0.7;
 }
 
 .return__top:hover {
@@ -1553,8 +1559,8 @@ footer {
 }
 
 .return__top img {
-  width: 4rem;
-  height: 4rem;
+  width: 2.8rem;
+  height: 3rem;
 }
 
 .return__top button {
@@ -1564,10 +1570,30 @@ footer {
   outline: none;
 }
 
+/* Deskop version */
+@media screen and (min-width: 768px) {
+  .return__top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+    background-color: #ffffff;
+    border: 3px solid #08A6E4;
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+}
 .slider {
   margin-bottom: 5%;
   position: relative;
-  width: 400px;
+  width: 100%;
   height: 200px;
   overflow: hidden;
 }
@@ -1582,7 +1608,7 @@ footer {
   width: 100%;
   height: auto;
   flex-shrink: 0;
-  width: 400px;
+  width: 100%;
   height: 200px;
 }
 
@@ -1689,7 +1715,7 @@ footer {
 .newsletter__modal {
   margin: auto;
   width: 80%;
-  max-width: 800px;
+  max-width: 100vw;
   /* Aumentamos el ancho máximo para acomodar la imagen y el formulario */
   height: 40%;
   /* Altura automática según el contenido */
