--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -22,7 +22,7 @@
     border: none;
     width: 1.25rem;
     height: 0.875rem;
-    margin-left: 20rem;
+    margin-left: 80%;
     position: relative;
     bottom: 0.6rem;
 }
