--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -6,7 +6,7 @@
 .newsletter__modal {
     margin: auto;
     width: 80%;
-    max-width: 800px;
+    max-width: 100vw;
     /* Aumentamos el ancho máximo para acomodar la imagen y el formulario */
     height: 40%;
     /* Altura automática según el contenido */
