--- a/sass/_section_marketing.scss
+++ b/sass/_section_marketing.scss
@@ -49,10 +49,10 @@
 }
 
 .section__marketing__img {
-    width: 48.6875rem;
+    width: 100%;
     height: 16.6875rem;
     position: relative;
-    left: -12.5938rem;
+    /*     left: -12.5938rem; */
 }
 
 .section__marketing__container {
