--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
     margin-bottom: 5%;
     position: relative;
-    width: 400px;
+    width: 100%;
     height: 200px;
     overflow: hidden;
 }
@@ -16,7 +16,7 @@
     width: 100%;
     height: auto;
     flex-shrink: 0;
-    width: 400px;
+    width: 100%;
     height: 200px;
 }
 
