--- a/sass/_topArrow.scss
+++ b/sass/_topArrow.scss
@@ -8,14 +8,15 @@
     background-color: #ffffff;
     border: 3px solid $blue;
     border-radius: 50%;
-    width: 5rem;
-    height: 5rem;
+    width: 2rem;
+    height: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: all 0.3s;
+    opacity: 0.7;
 }
 
 .return__top:hover {
@@ -24,8 +25,8 @@
 }
 
 .return__top img {
-    width: 4rem;
-    height: 4rem;
+    width: 2.8rem;
+    height: 3rem;
 }
 
 .return__top button {
@@ -33,4 +34,28 @@
     border: none;
     cursor: pointer;
     outline: none;
+}
+
+/* Deskop version */
+@media screen and (min-width: 768px) {
+
+    .return__top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000;
+        background-color: #ffffff;
+        border: 3px solid $blue;
+        border-radius: 50%;
+        width: 5rem;
+        height: 5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: all 0.3s;
+    }
+
+
 }
